_sass/layout/_main.scss
* {
    box-sizing: border-box;
}

body {
    background-color: var(--bg-main);
    margin: 0;
    line-height: 1.5em;
    color: var(--text);
    font-family: Helvetica, sans-serif;
}

h1 {
    font-size: 2.5rem;
    line-height: 1.2em; // Necessary for multi-line titles with emojis
    font-family: 'Palatino', serif;
}

h2 {
    font-size: 2rem;
    font-family: 'Palatino', serif;
}

h3 {
    font-size: 1.5rem;
    font-family: 'Palatino', serif;
}

h4 {
    font-size: 1.25rem;
    font-family: 'Palatino', serif;
}

.main-content{
    padding: 1rem;
}

.main-grid{
    display: grid;
    align-items: center;
    grid-template-columns: 1fr $mediumdevice-width 1fr;
}

@media screen and (max-width: $header-width){
    .main-grid{
        grid-template-columns: 0fr 1fr 0fr;
    }
}

